Table width needs to be fixed on tablet width

--- a/sass/blocks/price.scss
+++ b/sass/blocks/price.scss
@@ -113,10 +113,15 @@
 
 @media ($desktop-width) {
   .price {
+
+    &__list {
+      min-width: 940px;
+    }
+
     &__field {
 
       &:not(:first-child) {
-        min-width: 230px;
+
     }
 
       &:first-child {
